--- a/09_tzwitter_app/app/src/components/FeedHeader.css
+++ b/09_tzwitter_app/app/src/components/FeedHeader.css
@@ -3,8 +3,10 @@
   color: white;
   border-bottom: 1px solid rgb(62, 65, 68);
   padding: 24px;
-  box-sizing: border-box;
   display: flex;
+  border-right: 1px solid rgb(62, 65, 68);
+  border-left: 1px solid rgb(62, 65, 68);
+  box-sizing: border-box;
 }
 
 .feed-header-go-home {
