--- a/09_tzwitter_app/app/src/components/FeedKind.css
+++ b/09_tzwitter_app/app/src/components/FeedKind.css
@@ -4,6 +4,9 @@
   justify-content: center;
   align-items: center;
   border-bottom: 1px solid rgb(62, 65, 68);
+  border-right: 1px solid rgb(62, 65, 68);
+  border-left: 1px solid rgb(62, 65, 68);
+  box-sizing: border-box;
 }
 
 #feed-kind > * {
