--- a/09_tzwitter_app/app/src/components/Input.css
+++ b/09_tzwitter_app/app/src/components/Input.css
@@ -3,6 +3,8 @@
   padding: 12px;
   box-sizing: border-box;
   border-bottom: 1px solid rgb(62, 65, 68);
+  border-right: 1px solid rgb(62, 65, 68);
+  border-left: 1px solid rgb(62, 65, 68);
 }
 
 #input {
