--- a/09_tzwitter_app/app/src/components/ProfileHeader.css
+++ b/09_tzwitter_app/app/src/components/ProfileHeader.css
@@ -4,4 +4,7 @@
   padding: 24px;
   font-weight: 600;
   font-size: 24px;
+  border-right: 1px solid rgb(62, 65, 68);
+  border-left: 1px solid rgb(62, 65, 68);
+  box-sizing: border-box;
 }
