--- a/09_tzwitter_app/app/src/components/Menu.css
+++ b/09_tzwitter_app/app/src/components/Menu.css
@@ -38,3 +38,16 @@
 .menu-entry-bold {
   font-weight: 600;
 }
+
+@media (max-width: 1000px) {
+  .menu-entry > div {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  #menu {
+    margin-right: 0;
+    align-items: center;
+  }
+}
