--- a/09_tzwitter_app/app/src/components/TweetComponent.css
+++ b/09_tzwitter_app/app/src/components/TweetComponent.css
@@ -128,3 +128,18 @@
   filter: invert(48%) sepia(93%) saturate(1981%) hue-rotate(179deg)
     brightness(98%) contrast(91%);
 }
+
+
+@media (max-width: 600px) {
+  .tweet {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .tweet-author {
+    max-width: 180px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
